# dz-weekend-overtime

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  MIGRATION-REPORT.md  PRD.md  README-MIGRATION.md  README.md  TEST-RESULTS.md  docker-compose.yml  flask-to-fastapi-vue-migration-e10bc4.md  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  start-dev.sh  test-backend.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  opencode.yml
.iflow/commands/: opsx-explore.md
.windsurf/workflows/: new.md
backend/: .dockerignore  Dockerfile  requirements.txt
backend/app/: __init__.py  database.py  main.py
backend/static/: index.html
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
docs/plans/: 2026-02-20-7day-overtime-design.md  2026-02-20-7day-overtime-implementation.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.vue  shims-vue.d.ts
nginx/: README.md  nginx.conf
scripts/: migrate_enforce_unique_sat_sun.py  migrate_to_standard_schema.py
tests/: __init__.py  conftest.py  test_api_op_triggers.py  test_confirm_api.py  test_department_operation_model.py  test_department_operation_service.py  test_middleware.py  test_op_records_integration.py  test_security_middleware.py  test_services.py
weekendOvertime/: __init__.py  db.py  schema.sql  work.py
weekendOvertime/routes/: __init__.py  edit_names.py  index.py  info.py  (+3 more)
weekend_overtime/: __init__.py  db.py  schema.sql  work.py
(+83 files in other folders)
